UI: footer & navbar redesign completed

--- a/client/app/app.css
+++ b/client/app/app.css
@@ -2,11 +2,11 @@
 @import 'tw-animate-css';
 
 @custom-variant dark (&:is(.dark *));
-@plugin "daisyui" {
+/* @plugin "daisyui" {
   themes:
     light --default,
     dark --prefersdark;
-}
+} */
 
 @theme {
   --font-sans:
